@@ -1,3 +1,8 @@
+2013-11-16  Ralf Hemmecke  <ralf@hemmecke.org>
+
+	* Makefile.in, src/etc/fricas, src/interp/i-syscmd.boot: find
+	aldor at startup
+
 2013-11-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/bags.spad.pamphlet,
